--- a/main.html
+++ b/main.html
@@ -8,7 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table border ="1" style width = 50%><thead><tr><th>Index</th><th>Image Source</th><th>Wiki Link</th></tr></thead><tbody><tr><td>1</td><td><a href="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg">Golden Retriever img link</a></td><td><a href="https://en.wikipedia.org/wiki/Golden_Retriever">Golden Retriever</a></td></tr><tr><td>2</td><td><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg">Poodle img link</a></td><td><a href="https://en.wikipedia.org/wiki/Poodle">Poodle</a></td></tr></tbody></table>
+	<ul>
+		<li>
+			<a href ="https://en.wikipedia.org/wiki/Golden_Retriever"><img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" ></li>
+		<li>
+			<a href ="https://en.wikipedia.org/wiki/Poodle"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg"></li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
